# eurovis2020_hyperbolic_trajectories

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker.sh  example.py
.github/workflows/: main.yml
include/hyperbolic_trajectories/: approximate_dht.h  continuous_svd.h
include/simple/: central_differences_jacobian.h  system_adapter.h  trilinear_interpolator.h  vtk_grid_3d.h
include/util/: default_request_data_object.h
paraview/: ApproximateDHT.xml  CMakeLists.txt  paraview.plugin
vtk/: CMakeLists.txt  vtk.module  vtkApproximateDHT.cpp  vtkApproximateDHT.h
